macros/tests/ui/global_cs.stderr
error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> tests/ui/global_cs.rs:16:1
   |
16 | #[interrupt]
   | ^^^^^^^^^^^^
   |
   = note: see issue #38487 <https://github.com/rust-lang/rust/issues/38487> for more information
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `interrupt` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0759]: `cs` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> tests/ui/global_cs.rs:11:14
   |
8  | #[entry]
   | -------- this data with lifetime `'a`...
...
11 |         CS = Some(cs);
   |              ^^^^^--^
   |                   |
   |                   ...is used and required to live as long as `'static` here

error[E0570]: `"msp430-interrupt"` is not a supported ABI for the current target
  --> tests/ui/global_cs.rs:16:1
   |
16 | #[interrupt]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `interrupt` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0759]: `cs` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> tests/ui/global_cs.rs:19:14
   |
16 | #[interrupt]
   | ------------ this data with lifetime `'a`...
...
19 |         CS = Some(cs);
   |              ^^^^^--^
   |                   |
   |                   ...is used and required to live as long as `'static` here
